# low_level_languages_python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
c_lib/: __init__.py  lib_c.py  primes.c  setup.py  sieve_of_atkin.c
log/: sieve_of_atkin_c_data.json  sieve_of_atkin_numba_data.json  sieve_of_atkin_python_data.json
python_lib/: __init__.py  lib_numba.py  lib_numpy.py  lib_python.py
research/: research.ipynb
src/: __init__.py  starters.py  utils.py
