[tool.poetry]
name = "low-level-languages-python"
version = "0.1.0"
description = ""
authors = ["Neko1313 <89246763535@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
maturin = "^1.7.8"
loguru = "^0.7.3"
mypy = "^1.13.0"
ruff = "^0.8.3"
numba = "^0.60.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
setuptools = "^75.6.0"
cython = "^3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_calls = true
disallow_untyped_defs = true


[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501", "F401"]
target-version = "py312"
fixable = ["E", "F"]
unfixable = ["W292"]

[tool.ruff.per-file-ignores]
"*/*/__init__.py" = ["ALL"]


[tool.pytest.ini_options]
testpaths = ["tests"]